--- a/02-01.Crowller/package.json
+++ b/02-01.Crowller/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cheerio": "^0.22.21",
     "@types/superagent": "^4.1.9",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "superagent": "^6.0.0"
   }
 }
